Put the proxy_pass directives within "location"

--- a/conf.d/blog.conf
+++ b/conf.d/blog.conf
@@ -3,6 +3,8 @@ server {
 
     server_name blog.szeremi.org
 
-    proxy_pass http://localhost:10081;
+    location / {
+        proxy_pass http://localhost:10081;
+    }
 }
 
