--- a/conf.d/redmine.conf
+++ b/conf.d/redmine.conf
@@ -3,6 +3,8 @@ server {
 
     server_name redmine.szeremi.org
 
-    proxy_pass http://localhost:10083;
+    location / {
+        proxy_pass http://localhost:10083;
+    }
 }
 
