--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -3,6 +3,8 @@ server {
 
     server_name www.szeremi.org
 
-    proxy_pass http://localhost:10082;
+    location / {
+        proxy_pass http://localhost:10082;
+    }
 }
 
