Add semicolons after server_name statements

--- a/conf.d/blog.conf
+++ b/conf.d/blog.conf
@@ -1,7 +1,7 @@
 server {
     listen  80;
 
-    server_name blog.szeremi.org
+    server_name blog.szeremi.org;
 
     location / {
         proxy_pass http://localhost:10081;
