--- a/conf.d/redmine.conf
+++ b/conf.d/redmine.conf
@@ -1,7 +1,7 @@
 server {
     listen  80;
 
-    server_name redmine.szeremi.org
+    server_name redmine.szeremi.org;
 
     location / {
         proxy_pass http://localhost:10083;
