--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen  80;
 
-    server_name www.szeremi.org
+    server_name www.szeremi.org;
 
     location / {
         proxy_pass http://localhost:10082;
