--- a/units/szeremi-nginx.service
+++ b/units/szeremi-nginx.service
@@ -1,17 +1,19 @@
+# Simple nginx-proxy service that requires 0 configuration here.
+# Credit goes to someone else for this, but I don't know who.
+# https://gist.github.com/frankhildebrandt/ed3be27abf1a44035567
+
 [Unit]
-Description=Run %p
-Requires=docker.service
+Description=Autoconfigured Nginx-Reverse-Proxy
 After=docker.service
+Requires=docker.service
 
 [Service]
-Restart=always
+TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill %p
-ExecStartPre=-/usr/bin/docker rm -f %p
-ExecStart=/usr/bin/docker run --rm --name %p \
-  -p 80:80 \
-  amcsi/szeremi-nginx
-ExecStop=/usr/bin/docker stop %p
+ExecStartPre=-/usr/bin/docker rm %p
+ExecStartPre=/usr/bin/docker pull jwilder/nginx-proxy
+ExecStart=/usr/bin/docker run -p 80:80 -p 443:443 -v /home/proxy:/etc/nginx/certs  -v /var/run/docker.sock:/tmp/docker.sock --name %p jwilder/nginx-proxy
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
-
