Correct unit file for szeremi-redmine (docker-compose)

--- a/units/szeremi-redmine.service
+++ b/units/szeremi-redmine.service
@@ -6,13 +6,13 @@ After=docker.service
 
 [Service]
 Restart=always
-ExecStartPre=-/usr/bin/docker-compose stop docker-redmine
-ExecStartPre=-/usr/bin/docker-compose rm docker-redmine
-ExecStart=/usr/bin/docker-compose \
+ExecStartPre=-/opt/bin/docker-compose -f /home/core/docker-redmine/docker-compose.yml stop
+ExecStartPre=-/opt/bin/docker-compose -f /home/core/docker-redmine/docker-compose.yml rm
+ExecStart=/opt/bin/docker-compose \
     -f /home/core/docker-redmine/docker-compose.yml \
     -f /home/core/szeremi-nginx/projects/szeremi-redmine/docker-compose.yml \
     up
-ExecStop=/usr/bin/docker stop docker-redmine
+ExecStop=/opt/bin/docker-compose -f /home/core/docker-redmine/docker-compose.yml stop
 
 [Install]
 WantedBy=multi-user.target
