--- a/units/szeremi-blog.service
+++ b/units/szeremi-blog.service
@@ -11,6 +11,8 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 # Provide the virtual host for nginx-proxy
 ExecStart=/usr/bin/docker run --rm --name %p \
     -e VIRTUAL_HOST=blog.szeremi.org \
+    -v /mnt/szeremi-blog/sites/default:/var/www/html/sites/default \
+    -v /mnt/szeremi-blog/uploads:/var/www/uploads \
     --link mysql \
     drupal:8.0
 ExecStop=/usr/bin/docker stop %p
