--- a/units/szeremi-blog.service
+++ b/units/szeremi-blog.service
@@ -1,8 +1,9 @@
 [Unit]
-Description=Run %p
+Description=Run %p. If Drupal is not yet installed, call bin/blog-install.sh, then bin/blog-install-after.sh once the installation is complete.
 Requires=docker.service
 Wants=szeremi-nginx.service
 After=docker.service
+ConditionPathExists=/mnt/szeremi-blog/sites/default/settings.php
 
 [Service]
 Restart=always
@@ -11,7 +12,7 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 # Provide the virtual host for nginx-proxy
 ExecStart=/usr/bin/docker run --rm --name %p \
     -e VIRTUAL_HOST=blog.szeremi.org \
-    -v /mnt/szeremi-blog/sites/default:/var/www/html/sites/default \
+    -v /mnt/szeremi-blog/sites/default/settings.php:/var/www/html/sites/default/settings.php \
     -v /mnt/szeremi-blog/uploads:/var/www/uploads \
     --link mysql \
     drupal:8.1
