--- a/units/szeremi.service
+++ b/units/szeremi.service
@@ -13,7 +13,7 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 # Provide the virtual host for nginx-proxy
 ExecStart=/usr/bin/docker run --rm --name %p \
   -p 10082:8080 \
-  -e VIRTUAL_HOST=www.szeremi.org
+  -e VIRTUAL_HOST=www.szeremi.org \
   amcsi/szeremi
 ExecStop=/usr/bin/docker stop %p
 
