--- a/units/szeremi.service
+++ b/units/szeremi.service
@@ -5,7 +5,6 @@ Wants=szeremi-nginx.service
 After=docker.service
 
 [Service]
-# Should contain SZEREMI_GA_TRACKING_ID
 EnvironmentFile=/etc/environment
 Restart=always
 ExecStartPre=-/usr/bin/docker kill %p
@@ -14,6 +13,7 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStart=/usr/bin/docker run --rm --name %p \
   -p 10082:8080 \
   -e VIRTUAL_HOST=www.szeremi.org \
+  -e SZEREMI_GA_TRACKING_ID=${SZEREMI_GA_TRACKING_ID} \
   amcsi/szeremi
 ExecStop=/usr/bin/docker stop %p
 
