--- a/units/szeremi-nginx.service
+++ b/units/szeremi-nginx.service
@@ -8,11 +8,15 @@ After=docker.service
 Requires=docker.service
 
 [Service]
+Environment=CONTAINER_NAME=jwilder/nginx-proxy
 TimeoutStartSec=0
+ExecStartPre=-/usr/bin/docker pull ${CONTAINER_NAME}
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
-ExecStartPre=/usr/bin/docker pull jwilder/nginx-proxy
-ExecStart=/usr/bin/docker run -p 80:80 -p 443:443 -v /home/proxy:/etc/nginx/certs  -v /var/run/docker.sock:/tmp/docker.sock --name %p jwilder/nginx-proxy
+ExecStart=/usr/bin/docker run --rm  --name %p \
+    -p 80:80 -p 443:443 \
+    -v /home/proxy:/etc/nginx/certs  -v /var/run/docker.sock:/tmp/docker.sock \
+    ${CONTAINER_NAME}
 Restart=always
 
 [Install]
