--- a/units/szeremi.service
+++ b/units/szeremi.service
@@ -6,7 +6,9 @@ After=docker.service
 
 [Service]
 EnvironmentFile=/etc/environment
+Environment=CONTAINER_NAME=amcsi/szeremi
 Restart=always
+ExecStartPre=-/usr/bin/docker pull ${CONTAINER_NAME}
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
 # Provide the virtual host for nginx-proxy
@@ -14,7 +16,7 @@ ExecStart=/usr/bin/docker run --rm --name %p \
   -p 10082:8080 \
   -e VIRTUAL_HOST=www.szeremi.org \
   -e SZEREMI_GA_TRACKING_ID=${SZEREMI_GA_TRACKING_ID} \
-  amcsi/szeremi
+  ${CONTAINER_NAME}
 ExecStop=/usr/bin/docker stop %p
 
 [Install]
