Add Install clause for cleanup service to make it installable

--- a/units/cleanup.service
+++ b/units/cleanup.service
@@ -5,3 +5,6 @@ Description=Daily cleanup e.g. saving space
 [Service]
 Type=oneshot
 ExecStart=/usr/bin/docker rmi $(docker images -f "dangling=true" -q)
+
+[Install]
+WantedBy=multi-user.target
