Use /bin/sh for command using subshell

--- a/units/cleanup.service
+++ b/units/cleanup.service
@@ -4,7 +4,7 @@ Description=Daily cleanup e.g. saving space
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/docker rmi $(docker images -f "dangling=true" -q)
+ExecStart=/bin/sh -c '/usr/bin/docker rmi `docker images -f "dangling=true" -q)`'
 
 [Install]
 WantedBy=multi-user.target
