--- a/units/cleanup.service
+++ b/units/cleanup.service
@@ -4,7 +4,7 @@ Description=Daily cleanup e.g. saving space
 
 [Service]
 Type=oneshot
-ExecStart=/bin/sh -c '/usr/bin/docker rmi `docker images -f "dangling=true" -q)`'
+ExecStart=/bin/sh -c '/usr/bin/docker images --quiet --filter=dangling=true | xargs --no-run-if-empty docker rmi'
 
 [Install]
 WantedBy=multi-user.target
