--- a/units/elm-tic-tac-toe.service
+++ b/units/elm-tic-tac-toe.service
@@ -16,7 +16,7 @@ ExecStart=/usr/bin/docker run --rm --name %p \
   -p 10085:8080 \
   -e VIRTUAL_HOST=tictactoe.szeremi.org \
   ${CONTAINER_NAME}
-ExecStop=/usr/bin/docker stop %pg
+ExecStop=/usr/bin/docker stop %p
 
 [Install]
 WantedBy=multi-user.target
