--- a/units/mysql.service
+++ b/units/mysql.service
@@ -11,8 +11,14 @@ Environment=CONTAINER_NAME=mysql
 Restart=always
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
+# The network for being able to see this service.
+ExecStartPre=-/usr/bin/docker network create szeremi
+
 ExecStart=/usr/bin/docker run --rm --name %p \
     -v /var/lib/mysql:/var/lib/mysql \
+    -v ${MYSQL_CONFIG_FILE}:/etc/mysql/conf.d/mysql.cnf \
+    -e MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD} \
+    --network szeremi \
     ${CONTAINER_NAME}:5.7
 ExecStop=/usr/bin/docker stop %p
 
