--- a/units/lycdb-forums.service
+++ b/units/lycdb-forums.service
@@ -13,8 +13,8 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 # Provide the virtual host for nginx-proxy
 ExecStart=/usr/bin/docker run --rm --name %p \
   -p 10090:80 \
-  -e VIRTUAL_HOST=lycdb-forums.szeremi.org,forums.lycee-tcg.eu \
-  -e MYSQL_HOST=mysql
+  -e VIRTUAL_HOST=lycdb-forums.localtest.me,lycdb-forums.szeremi.org,forums.lycee-tcg.eu \
+  -e MYSQL_HOST=mysql \
   -e MYSQL_PASS=${LYCDB_MYSQL_PASS} \
   --network szeremi \
   ${CONTAINER_NAME}
