Have nginx-proxy (szeremi-nginx) also join szeremi network

--- a/units/szeremi-nginx.service
+++ b/units/szeremi-nginx.service
@@ -12,13 +12,15 @@ Environment=CONTAINER_NAME=jwilder/nginx-proxy
 TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
-ExecStart=/usr/bin/docker run --rm  --name %p \
+ExecStartPre=/usr/bin/docker create --rm  --name %p \
     -p '80:80' -p 443:443 \
     -v /certs:/etc/nginx/certs:ro \
     -v /etc/nginx/vhost.d \
     -v /usr/share/nginx/html \
     -v /var/run/docker.sock:/tmp/docker.sock \
     ${CONTAINER_NAME}
+ExecStartPre=/usr/bin/docker network connect szeremi %p
+ExecStart=/usr/bin/docker start %p
 Restart=always
 
 [Install]
