--- a/units/lycdb.service
+++ b/units/lycdb.service
@@ -13,6 +13,7 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 # Provide the virtual host for nginx-proxy
 ExecStart=/usr/bin/docker run --rm --name %p \
   -p 10089:80 \
+  -v ${LYCDB_IMAGE_PATH}:/var/www/data/generated_images \
   -e VIRTUAL_HOST=lycdb.localtest.me,lycdb.szeremi.org,lycee-tcg.eu,www.lycee-tcg.eu \
   -e GA_TRACKING_ID=${LYCDB_GA_TRACKING_ID} \
   -e MYSQL_HOST=mysql \
