Adjust szeremi-nginx service to prevent it from stopping Remove TimeoutStartSec=0 from szeremi-nginx; add ExecStop
Attach in docker start for szeremi-nginx

--- a/units/szeremi-nginx.service
+++ b/units/szeremi-nginx.service
@@ -9,7 +9,6 @@ Requires=docker.service
 
 [Service]
 Environment=CONTAINER_NAME=jwilder/nginx-proxy
-TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
 ExecStartPre=/usr/bin/docker create --rm  --name %p \
@@ -20,8 +19,9 @@ ExecStartPre=/usr/bin/docker create --rm  --name %p \
     -v /var/run/docker.sock:/tmp/docker.sock \
     ${CONTAINER_NAME}
 ExecStartPre=/usr/bin/docker network connect szeremi %p
-ExecStart=/usr/bin/docker start %p
+ExecStart=/usr/bin/docker start --attach %p
 Restart=always
+ExecStop=/usr/bin/docker stop %p
 
 [Install]
 WantedBy=multi-user.target
