Do not --rm any docker run commands...
I'm doing this with the hopes that if I copy container configurations in
portainer, that the --rm bit wouldn't be propagated; with this, stopped
containers in portainer will not be removed, which is what I want.

--- a/units/lnpc.service
+++ b/units/lnpc.service
@@ -12,7 +12,7 @@ Environment=CONTAINER_NAME=jrcs/letsencrypt-nginx-proxy-companion
 TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
-ExecStart=/usr/bin/docker run --rm  --name %p \
+ExecStart=/usr/bin/docker run --name %p \
     -v /certs:/etc/nginx/certs:rw \
     --volumes-from szeremi-nginx \
     -v /var/run/docker.sock:/var/run/docker.sock:ro \
