--- a/units/elm-tic-tac-toe.service
+++ b/units/elm-tic-tac-toe.service
@@ -11,7 +11,7 @@ Restart=always
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
 # Provide the virtual host for nginx-proxy
-ExecStart=/usr/bin/docker run --rm --name %p \
+ExecStart=/usr/bin/docker run --name %p \
   -p 10085:8080 \
   -e VIRTUAL_HOST=tictactoe.szeremi.org \
   ${CONTAINER_NAME}
