--- a/units/mysql.service
+++ b/units/mysql.service
@@ -14,7 +14,7 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 # The network for being able to see this service.
 ExecStartPre=-/usr/bin/docker network create szeremi
 
-ExecStart=/usr/bin/docker run --rm --name %p \
+ExecStart=/usr/bin/docker run --name %p \
     -v ${MYSQL_DATA_PATH}:/var/lib/mysql \
     -v ${MYSQL_CONFIG_FILE}:/etc/mysql/conf.d/mysql.cnf \
     -e MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD} \
