--- a/units/portainer.service
+++ b/units/portainer.service
@@ -15,7 +15,7 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 # Login user data
 ExecStartPre=-/usr/bin/docker volume create portainer_data
 
-ExecStart=/usr/bin/docker run --rm --name %p \
+ExecStart=/usr/bin/docker run --name %p \
    -p 9000:9000 \
    -v /var/run/docker.sock:/var/run/docker.sock \
    -v portainer_data:/data \
