--- a/units/szeremi-nginx.service
+++ b/units/szeremi-nginx.service
@@ -11,7 +11,7 @@ Requires=docker.service
 Environment=CONTAINER_NAME=jwilder/nginx-proxy
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
-ExecStartPre=/usr/bin/docker create --rm  --name %p \
+ExecStartPre=/usr/bin/docker create --name %p \
     -p '80:80' -p 443:443 \
     -v /certs:/etc/nginx/certs:ro \
     -v /etc/nginx/vhost.d \
