--- a/units/watchtower.service
+++ b/units/watchtower.service
@@ -8,7 +8,7 @@ Environment=CONTAINER_NAME=centurylink/watchtower
 Restart=always
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
-ExecStart=/usr/bin/docker run --rm --name %p \
+ExecStart=/usr/bin/docker run --name %p \
   -v /var/run/docker.sock:/var/run/docker.sock \
   ${CONTAINER_NAME}
 ExecStop=/usr/bin/docker stop %p
