--- a/units/szeremi.service
+++ b/units/szeremi.service
@@ -14,6 +14,8 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStart=/usr/bin/docker run --name %p \
   -p 10082:8080 \
   -e VIRTUAL_HOST=www.szeremi.org \
+  -e LETSENCRYPT_HOST=www.szeremi.org \
+  -e LETSENCRYPT_EMAIL=attila@szeremi.org \
   -e SZEREMI_GA_TRACKING_ID=${SZEREMI_GA_TRACKING_ID} \
   ${CONTAINER_NAME}
 ExecStop=/usr/bin/docker stop %p
