--- a/units/skill-builder.service
+++ b/units/skill-builder.service
@@ -13,6 +13,8 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStart=/usr/bin/docker run --name %p \
   -p 10086:8080 \
   -e VIRTUAL_HOST=skillbuilder.szeremi.org \
+  -e LETSENCRYPT_HOST=skillbuilder.szeremi.org \
+  -e LETSENCRYPT_EMAIL=attila@szeremi.org \
   ${CONTAINER_NAME}
 ExecStop=/usr/bin/docker stop %p
 
