--- a/units/elm-tic-tac-toe.service
+++ b/units/elm-tic-tac-toe.service
@@ -14,6 +14,8 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStart=/usr/bin/docker run --name %p \
   -p 10085:8080 \
   -e VIRTUAL_HOST=tictactoe.szeremi.org \
+  -e LETSENCRYPT_HOST=tictactoe.szeremi.org \
+  -e LETSENCRYPT_EMAIL=attila@szeremi.org \
   ${CONTAINER_NAME}
 ExecStop=/usr/bin/docker stop %p
 
