--- a/units/phpunit-failures.service
+++ b/units/phpunit-failures.service
@@ -14,6 +14,8 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStart=/usr/bin/docker run --name %p \
   -p 10088:8080 \
   -e VIRTUAL_HOST=phpunit-failures.szeremi.org \
+  -e LETSENCRYPT_HOST=phpunit-failures.szeremi.org \
+  -e LETSENCRYPT_EMAIL=attila@szeremi.org \
   ${CONTAINER_NAME}
 ExecStop=/usr/bin/docker stop %p
 
