--- a/units/lycee-overture.service
+++ b/units/lycee-overture.service
@@ -15,8 +15,8 @@ ExecStart=/usr/bin/docker run --name %p \
   -p 10094:80 \
   -v ${LYCEE_OVERTURE_STORAGE_DIR}:/var/www/storage \
   --env-file=${LYCEE_OVERTURE_ENV_FILE} \
-  -e VIRTUAL_HOST=lycee-overture.szeremi.org,lycee-overture.localtest.me \
-  -e LETSENCRYPT_HOST=lycee-overture.szeremi.org \
+  -e VIRTUAL_HOST=lycee-overture.szeremi.org,lycee-overture.localtest.me,lycee-tcg.eu,www.lycee-tcg.eu \
+  -e LETSENCRYPT_HOST=lycee-overture.szeremi.org,lycee-tcg.eu,www.lycee-tcg.eu \
   -e LETSENCRYPT_EMAIL=attila@szeremi.org \
   -e LOG_CHANNEL=errorlog \
   --network szeremi \
