--- a/units/szeremi-jenkins.service
+++ b/units/szeremi-jenkins.service
@@ -6,7 +6,7 @@ After=docker.service
 
 [Service]
 EnvironmentFile=/etc/environment
-Environment=CONTAINER_NAME=jenkins/jenkins
+Environment=CONTAINER_NAME=amcsi/jenkins
 Restart=always
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
@@ -15,7 +15,10 @@ ExecStart=/usr/bin/docker run --name %p \
   -p 10095:8080 \
   -p 50000:50000 \
   -v /var/jenkins_home:/var/jenkins_home \
-  -e VIRTUAL_HOST=jejenkins.szeremi.org,jenkins.localtest.me \
+  -v /var/run/docker.sock:/var/run/docker.sock \
+  -v /usr/bin/docker:/usr/bin/docker \
+  -u root \
+  -e VIRTUAL_HOST=jejenkins.szeremi.org,jejenkins.localtest.me \
   -e VIRTUAL_PORT=8080 \
   -e LETSENCRYPT_HOST=jejenkins.szeremi.org \
   -e LETSENCRYPT_EMAIL=attila@szeremi.org \
