--- a/units/szeremi.service
+++ b/units/szeremi.service
@@ -16,7 +16,7 @@ ExecStart=/usr/bin/docker run --name %p \
   -e VIRTUAL_HOST=www.szeremi.org \
   -e LETSENCRYPT_HOST=www.szeremi.org \
   -e LETSENCRYPT_EMAIL=attila@szeremi.org \
-  -e SZEREMI_GA_TRACKING_ID=${SZEREMI_GA_TRACKING_ID} \
+  -e GATSBY_GA_TRACKING_ID=${SZEREMI_GA_TRACKING_ID} \
   ${CONTAINER_NAME}
 ExecStop=/usr/bin/docker stop %p
 
