--- a/units/youtube-delete-tracker-schedule.service
+++ b/units/youtube-delete-tracker-schedule.service
@@ -5,20 +5,19 @@ Wants=szeremi-nginx.service
 After=docker.service
 
 [Service]
+Type=oneshot
 EnvironmentFile=/etc/environment
 Environment=CONTAINER_NAME=youtube-delete-tracker
-Restart=always
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStart=/usr/bin/docker run --name %p \
   -v ${YOUTUBE_DELETE_TRACKER_STORAGE_DIR}:/var/www/storage \
-  --env-file=${SZEREMI_NGINX_PATH}/projects/%p/.env \
+  --env-file=${SZEREMI_NGINX_PATH}/projects/youtube-delete-tracker/.env \
   --network szeremi \
-  -p 10097:80 \
-  -e VIRTUAL_HOST=youtube-delete-tracker.szeremi.org,youtube-delete-tracker.localtest.me \
-  -e LETSENCRYPT_HOST=youtube-delete-tracker.szeremi.org \
-  -e LETSENCRYPT_EMAIL=attila@szeremi.org \
-  ${CONTAINER_NAME}
+  ${CONTAINER_NAME} \
+  /bin/bash -c \
+  "php artisan migrate --force && \
+  php artisan scan-channel --all"
 ExecStop=/usr/bin/docker stop %p
 
 [Install]
