--- a/units/mudae.service
+++ b/units/mudae.service
@@ -11,7 +11,7 @@ Restart=always
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStart=/usr/bin/docker run --name %p \
-  -v ${YOUTUBE_DELETE_TRACKER_STORAGE_DIR}:/var/www/storage \
+  -v ${SZEREMI_NGINX_PATH}/projects/%p/storage:/var/www/storage \
   --env-file=${SZEREMI_NGINX_PATH}/projects/%p/.env \
   --network szeremi \
   ${CONTAINER_NAME}
